tests/data/oidc-native-fclo/ingress/ingress-two.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: native-fclo-ingress-two
  annotations:
    nginx.com/policies: "oidc-native-policy-two"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - native-fclo-two.example.com
      secretName: tls-secret
  rules:
    - host: native-fclo-two.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fclo-two-svc
                port:
                  number: 80
